[tool.poetry]
name = "neuralcorefx"
version = "0.1.0"
description = "A Spacy3 plugin for fast coreference resolution with rules and shallow neural networks."
authors = ["Andrei-Cristian Rad"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
